--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "bacon/bacon-qr-code": "^2.0",
         "directorytree/ldaprecord": "*",
         "doctrine/dbal": "^3.6",
         "guzzlehttp/guzzle": "^7.2",
@@ -14,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "maatwebsite/excel": "^3.1",
+        "pragmarx/google2fa-laravel": "^2.1",
         "psr/simple-cache": "^2.0"
     },
     "require-dev": {
