--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:WE+2B9XmciGCiism1c6b8WDertLJrjlooxB2fzXAYKU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
