--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:WE+2B9XmciGCiism1c6b8WDertLJrjlooxB2fzXAYKU=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000/
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
