--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
+        "logtail/monolog-logtail": "^2.0",
         "maatwebsite/excel": "^3.1",
         "pragmarx/google2fa-laravel": "^2.1",
         "psr/simple-cache": "^2.0"
